Working after second part

--- a/index.html
+++ b/index.html
@@ -1,68 +1,114 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <canvas id="gameCanvas" width="800" height="500" style="border:1px solid" \>
+        <canvas id="myCanvas" width="800" height="500" style="border:1px solid" />        
         <script>
+            //Canvas config
+            const canvas = document.getElementById("myCanvas");
+            const ctx = canvas.getContext("2d");
+
+            ctx.font = "30px Arial";
+
+            const STATE_CHANGE_INTERVAL = 20;
+
             //Canvas const
             const CANVAS_HEIGHT = canvas.height;
             const CANVAS_WIDTH = canvas.width;
-            //Board const
+
+            let p1Points = 0;
+            let p2Points = 0;
+
             const BOARD_Y = 50;
             const BOARD_P1_X = 300;
             const BOARD_P2_X = 500;
-            //Paddles const
+
             const PADDLE_WIDTH = 20;
             const PADDLE_HEIGHT = 100;
             const PADDLE_P1_X = 10;
             const PADDLE_P2_X = 770;
             const PADDLE_START_Y = (CANVAS_HEIGHT - PADDLE_HEIGHT) / 2;
-            //Paddles variables
             let p1PaddleY = PADDLE_START_Y;
             let p2PaddleY = PADDLE_START_Y;
-            //Ball const
+
             const BALL_R = 15;
             const BALL_START_X = CANVAS_WIDTH / 2;
             const BALL_START_Y = CANVAS_HEIGHT / 2;
             const BALL_START_DX = 4.5;
             const BALL_START_DY = 1.5;
-            //Ball variables
             let ballX = BALL_START_X;
             let ballY = BALL_START_Y;
             let ballDX = BALL_START_DX;
             let ballDY = BALL_START_DY;
-            //Points variables
-            let p1Points = 0;
-            let p2Points = 0;
-            //Canvas config
-            const canvas = document.getElementById("gameCanvas");
-            const ctx = canvas.getContext("2d");
-            ctx.font="30px Arials";
-            //Drawing Functions
-            function clearCanvas() {
-                context.clearRect(0, 0, canvas.width, canvas.height);
-            }
+
             function drawPaddle(x, y) {
-                ctx.fillRect(x,y,20,100);
+                ctx.fillRect(x,y,PADDLE_WIDTH,PADDLE_HEIGHT);
             }
-            function drawText(text, x, y) {
-                ctx.fillText(text, x, y);
+
+            function drawPoints(text, x) {
+                ctx.fillText(text, x, BOARD_Y);
             }
+
             function drawCircle(x, y, r) {
                 ctx.beginPath();
-                ctx.arc(x, y, r, 0, Math.PI*2, true);
+                ctx.arc(x,y,r,0,Math.PI*2,true);
                 ctx.closePath();
                 ctx.fill();
             }
-            function drawState() {
-                clearCanvas();
-                drawPo
+
+            function drawBall(x, y) {
+                drawCircle(x, y, BALL_R);
             }
 
-            drawText("3",300,50);
-            drawText("6",500,50);
-            drawCircle(400,250,15);
+            function clearCanvas() {
+                ctx.clearRect(0, 0, canvas.width, canvas.height);
+            }
+
+            function drawState() {
+                clearCanvas();
+                drawPoints(p1Points.toString(), BOARD_P1_X);
+                drawPoints(p2Points.toString(), BOARD_P2_X);
+                drawBall(ballX, ballY);
+                drawPaddle(PADDLE_P1_X, p1PaddleY);
+                drawPaddle(PADDLE_P2_X, p2PaddleY);
+            }
+
+            function updateState() {
+                /*if (p1Action === UP_ACTION){
+                    p1PaddleY -= PADDLE_STEP;
+                } else if (p1Action === DOWN_ACTION){
+                    p1PaddleY += PADDLE_STEP;
+                }
+                if (p2Action === UP_ACTION){
+                    p2PaddleY -= PADDLE_STEP;
+                } else if (p2Action === DOWN_ACTION){
+                    p2PaddleY += PADDLE_STEP;
+                }
+                movePaddles();*/
+                ballX += ballDX;
+                ballY += ballDY;
+                p1PaddleY++;
+                p2PaddleY--;
+                p1Points++;
+                p2Points += 3;
+            }
+
+            function updateAndDrawState() {
+                updateState();
+                drawState();
+            }
+
+            setInterval(updateAndDrawState, STATE_CHANGE_INTERVAL);
+
+
+            /*drawState();
+            updateState();
+            drawState();
+
+            drawPoints("3",300);
+            drawPoints("6",500);
             drawPaddle(770,100);
             drawPaddle(10,300);
+            drawBall(400, 250);*/
             
         </script>
     </body>
